<resources>
    <string name="app_name">QAWorshopsAndroid</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_register">Register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="set_birthday_error">You need to set birthday first</string>
    <string name="add_item_name">Enter item name</string>
    <string name="item_name">Item name</string>
    <string name="add">Add</string>
    <string name="dialog_fragment_add_new_item_title">Add new item</string>
    <string name="action_create">Create</string>
    <string name="action_cancel">Cancel</string>
    <string name="dialog_fragment_add_new_item">Enter item name</string>
    <string name="prompt_first_name">First name</string>
    <string name="prompt_last_name">Last name</string>
    <string name="action_set_birthday">Set birthdate</string>
    <string name="select_country">Select Country</string>
    <string name="select_gender">Select gender</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="other">Other</string>
    <string name="register_new_account">Do not have an account? Register</string>
    <string name="have_account_sign_in">Already have an account? Sign in</string>
    <string name="login_data_incorrect">Provided login data is incorrect</string>
    <string name="your_birthday">Your birthday</string>
    <string-array name="countries_array">
        <item>Poland</item>
        <item>UK</item>
        <item>USA</item>
        <item>Russia</item>
        <item>Germany</item>
        <item>France</item>
        <item>Italy</item>
        <item>Spain</item>
        <item>Greece</item>
    </string-array>
    <string name="title_activity_main_test">MainTestActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="logout">Logout</string>
    <string name="on_user_null_error">Could not load your data, try again later</string>
</resources>
